name:               google-oauth2-jwt
version:            0.3.3.1
synopsis:           Get a signed JWT for Google Service Accounts
description:
  A lightweight library to get the
  signed JWT for Google Service Accounts

homepage:           https://github.com/MichelBoucey/google-oauth2-jwt
license:            BSD3
license-file:       LICENSE
author:             Michel Boucey
maintainer:         michel.boucey@gmail.com
copyright:          (c) 2016-2025 - Michel Boucey
category:           Google
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10
tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2
   || ==9.14.1

source-repository head
  type:     git
  location: https://github.com/MichelBoucey/google-oauth2-jwt.git

library
  hs-source-dirs:     src
  default-extensions: OverloadedStrings
  exposed-modules:    Network.Google.OAuth2.JWT
  build-depends:
      base               >=4.3    && <5
    , base64-bytestring  >=1.0.0  && <1.3
    , bytestring         >=0.10.6 && <0.13
    , HsOpenSSL          >=0.11.7 && <0.12
    , RSA                >=2.4.1  && <2.5
    , text               >=1.2.2  && <2.2
    , unix-time          >=0.3.6  && <0.5

  default-language:   Haskell2010
  ghc-options:        -Wall
